tests/ui/unsafe-binders/non-strucutral-type-diag.stderr
error: constant of non-structural type `Option<(unsafe<'a> Adt<'a>, Box<dyn Send>)>` in a pattern
  --> $DIR/non-strucutral-type-diag.rs:13:9
   |
LL | const C: Option<(unsafe<'a> Adt<'a>, Box<dyn Send>)> = None;
   | ---------------------------------------------------- constant defined here
...
LL |         C => {}
   |         ^ constant of non-structural type
   |
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: aborting due to 1 previous error

